--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "homelab-dns"
 version = "0.1.0"
 edition = "2021"
+authors = ["Ross Delinger <rossdylan@fastmail.com>"]
+readme = "README.md"
+description = "External-ish DNS for homelab kubernetes cluster"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
