--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,11 @@ license = "MIT"
 anyhow = "1"
 clap = { version = "3", features = ["derive"] }
 futures = "0.3"
+humantime = "2"
+json-patch = "0.2"
 k8s-openapi = { version = "0.14", features = ["v1_22"] }
-kube = { version = "0.69", features = ["runtime", "derive"]}
+kube = { version = "0.70", features = ["runtime", "derive"]}
+thiserror = "1"
 tokio = {version = "1.17", features = ["full"]}
 tracing = {version = "0.1"}
 tracing-subscriber = "0.3"
