--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,19 +11,20 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1"
+async-trait = "0.1"
 clap = { version = "3", features = ["derive"] }
 futures = "0.3"
 humantime = "2"
 json-patch = "0.2"
 k8s-openapi = { version = "0.15", features = ["v1_22"] }
-kube = { version = "0.73", features = ["runtime", "derive"]}
+kube = { version = "0.74", features = ["runtime", "derive"]}
 thiserror = "1"
 tokio = {version = "1.18", features = ["full"]}
 tracing = {version = "0.1"}
 tracing-subscriber = "0.3"
-trust-dns-client = "0.21.1"
-trust-dns-proto = "0.21.1"
-trust-dns-server = { version = "0.21.1", default-features = false }
+trust-dns-client = "0.22.0"
+trust-dns-proto = "0.22.0"
+trust-dns-server = { version = "0.22.0", default-features = false }
 
 [profile.release]
 debug = 1
